[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/menu/quests/quests.gd" type="Script" id=1]
[ext_resource path="res://images/icon/checkmark.png" type="Texture" id=2]

[node name="goals" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="backing" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -303.5
margin_top = -181.0
margin_right = 303.5
margin_bottom = 181.0
color = Color( 0, 0, 0, 0.47451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="HBoxContainer" parent="backing"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="l_scroll" type="ScrollContainer" parent="backing/panel"]
margin_right = 291.0
margin_bottom = 346.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goal_list" type="VBoxContainer" parent="backing/panel/l_scroll"]
margin_right = 291.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="goal_button" type="Button" parent="backing/panel/l_scroll/goal_list"]
margin_right = 291.0
margin_bottom = 20.0
text = "Quest Name"
align = 0
expand_icon = true

[node name="r_scroll" type="ScrollContainer" parent="backing/panel"]
margin_left = 299.0
margin_right = 591.0
margin_bottom = 346.0
size_flags_horizontal = 3

[node name="info" type="VBoxContainer" parent="backing/panel/r_scroll"]
margin_right = 292.0
margin_bottom = 143.0
size_flags_horizontal = 3

[node name="space" type="Control" parent="backing/panel/r_scroll/info"]
margin_right = 292.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 8 )

[node name="name" type="RichTextLabel" parent="backing/panel/r_scroll/info"]
margin_top = 12.0
margin_right = 292.0
margin_bottom = 27.0
bbcode_enabled = true
bbcode_text = "[center]QUEST TITLE"
text = "QUEST TITLE"
fit_content_height = true

[node name="desc" type="RichTextLabel" parent="backing/panel/r_scroll/info"]
modulate = Color( 1, 1, 1, 0.533333 )
margin_top = 31.0
margin_right = 292.0
margin_bottom = 91.0
rect_min_size = Vector2( 0, 60 )
bbcode_enabled = true
bbcode_text = "[center]QUEST TITLE"
text = "QUEST TITLE"
fit_content_height = true

[node name="subgoal_list" type="VBoxContainer" parent="backing/panel/r_scroll/info"]
margin_top = 95.0
margin_right = 292.0
margin_bottom = 143.0

[node name="subgoal" type="PanelContainer" parent="backing/panel/r_scroll/info/subgoal_list"]
margin_right = 292.0
margin_bottom = 48.0

[node name="properties" type="HBoxContainer" parent="backing/panel/r_scroll/info/subgoal_list/subgoal"]
margin_left = 7.0
margin_top = 7.0
margin_right = 285.0
margin_bottom = 41.0
alignment = 1

[node name="check" type="TextureRect" parent="backing/panel/r_scroll/info/subgoal_list/subgoal/properties"]
margin_right = 32.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="text" type="VBoxContainer" parent="backing/panel/r_scroll/info/subgoal_list/subgoal/properties"]
margin_left = 36.0
margin_right = 278.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="name" type="RichTextLabel" parent="backing/panel/r_scroll/info/subgoal_list/subgoal/properties/text"]
margin_right = 242.0
margin_bottom = 15.0
bbcode_enabled = true
bbcode_text = "Steal The Washer"
text = "Steal The Washer"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desc" type="RichTextLabel" parent="backing/panel/r_scroll/info/subgoal_list/subgoal/properties/text"]
modulate = Color( 1, 1, 1, 0.435294 )
margin_top = 19.0
margin_right = 242.0
margin_bottom = 34.0
bbcode_enabled = true
bbcode_text = "Ask to X about the forgotten notice."
text = "Ask to X about the forgotten notice."
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}
